updates pics and experience

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <source src="myname.mp3" type="audio/mp3">
                     </audio>
                     <div class="text">Hi there, my name is Ruixin. Click to hear how to say it.</div>
-                    <p> I am currently a junior consultant at Capgemini Engineering, Eindhoven based. I have a background Master of Data Science in Engineering at TU Eindhoven, my master's thesis is a data-driven approach for reproducing use scenarios using machine logs. I did my Bachelor of Computer Science at VU Amsterdam. <br>
+                    <p> I am currently a junior software engineer at Capgemini Engineering, Eindhoven based. I have a background Master of Data Science in Engineering at TU Eindhoven, my master's thesis is a data-driven approach for reproducing use scenarios using machine logs. I did my Bachelor of Computer Science at VU Amsterdam. <br>
                         <br>My colleagues and supervisors describe me as 'the sunshine from the south'. I feel excited when facing unstructured puzzles because I love finding inner links, making connections, and discovering insights from different resources.</p>
                     <a href="document/CV_RTang.pdf">Download CV</a>
                 </div>
@@ -119,9 +119,9 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-book"></i>
-                        <div class="text">Junior consultant/engineer</div>
+                        <div class="text">Associate software engineer</div>
                         <p>Capgemini Engineering, Eindhoven, The Netherlands</p>
-                        <p>Young talent in Technical Application Development</p>
+                        <p>2023.3-2024.1: Diagnostic approach unification at TNO-ESI </p>
                         <p>2022.12 - Now</p>
                     </div>
                 </div>
@@ -344,6 +344,18 @@
                                             <div class="col-lg-9 offset-lg-3">
                                                 <div class="work-container">
                                                     <div class="slick-slider">
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/ski.jpeg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Sports</h5>
+                                                                    <h4>Ski</h4>
+                                                                    <span><span>Le Tour, Chamonix, France</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
                                                         <div class="work-item slick-slide">
                                                             <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
                                                                 <img class="has-top-bottom" src="images/texel.jpeg"
@@ -661,7 +673,7 @@
                                                                 <div class="item-info">
                                                                     <h5 class="cat">Next...</h5>
                                                                     <h4>What about next? I don't know yet!</h4>
-                                                                    <span><span>Somewhere in the earth...</span></span>
+                                                                    <span><span>Somewhere in the space...</span></span>
                                                                 </div>
                                                             </a>
                                                         </div>
@@ -680,7 +692,7 @@
             <a href="mailto:imruixintang@outlook.com" class="email image-zoom" data-dsn="parallax">imruixintang@outlook.com</a>
         </div>
         <div class="copyright-social">
-            <p>© updated 12/19/2023</p>
+            <p>© last update on 24/01/2024</p>
             <ul>
               <li class="image-zoom" data-dsn="parallax"><a href="https://www.linkedin.com/in/ruixintang/" target="_blank">Linkedin</a></li>
               <li class="image-zoom" data-dsn="parallax"><a href="https://instagram.com/hanaki_hakaze?igshid=ZDdkNTZiNTM=" target：=“_blank">Instagram</a></li>
