--- a/index.html
+++ b/index.html
@@ -200,13 +200,17 @@
                                             <a href="https://youtu.be/kRUHzIvjOwk" target="_blank">Unification of two diagnostic approaches demonstration</a>
                                         </div>
 
-                                        <p>Diagnostic demonstrator for operational diagnostics and design4diagnostics:
+                                        <p>Key contribution:
                                             <br>
-                                            •	Shared model specification between two projects
+                                            •	Shared model specification: Collaborated closely with the team for operational diagnostics and design4diagnostics projects to develop a unified
+                                            model specification to create a standardized JSON schema.
                                             <br>
-                                            •	UI of a system model editor
+                                            •	Transformation from/to two projects: Developed a RESTful API using <mark>Python flask</mark> and <mark>Java Jakarta</mark> for the
+                                            transformation process from JSON schema from/to the original format(python and DSL) for the
+                                            unified visualization of the model created by researchers.
                                             <br>
-                                            •	Transformation from/to two projects
+                                            •	Front-end UI development: Created the design and development of the system model editor UI by
+                                            <mark>Typescript</mark> and <mark>React.js</mark>. This UI package is served to Canon
                                             </p>
                                         <div class="cta1">
                                         <a href="video/diagnostic demo intro.mp4" target="_blank">Video demonstration</a>
@@ -692,7 +696,7 @@
             <a href="mailto:imruixintang@outlook.com" class="email image-zoom" data-dsn="parallax">imruixintang@outlook.com</a>
         </div>
         <div class="copyright-social">
-            <p>© last update on 24/01/2024</p>
+            <p>© last update on 26/01/2024</p>
             <ul>
               <li class="image-zoom" data-dsn="parallax"><a href="https://www.linkedin.com/in/ruixintang/" target="_blank">Linkedin</a></li>
               <li class="image-zoom" data-dsn="parallax"><a href="https://instagram.com/hanaki_hakaze?igshid=ZDdkNTZiNTM=" target：=“_blank">Instagram</a></li>
