update cv and new experience

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <source src="myname.mp3" type="audio/mp3">
                     </audio>
                     <div class="text">Hi there, my name is Ruixin. Click to hear how to say it.</div>
-                    <p> I am currently a junior software engineer at Capgemini Engineering, Eindhoven based. I have a background Master of Data Science in Engineering at TU Eindhoven, my master's thesis is a data-driven approach for reproducing use scenarios using machine logs. I did my Bachelor of Computer Science at VU Amsterdam. <br>
+                    <p> I am currently a software engineer at Capgemini Engineering, Eindhoven based. I have a background Master of Data Science in Engineering at TU Eindhoven, my master's thesis is a data-driven approach for reproducing use scenarios using machine logs. I did my Bachelor of Computer Science at VU Amsterdam. <br>
                         <br>My colleagues and supervisors describe me as 'the sunshine from the south'. I feel excited when facing unstructured puzzles because I love finding inner links, making connections, and discovering insights from different resources.</p>
                     <a href="document/CV_RTang.pdf">Download CV</a>
                 </div>
@@ -122,6 +122,7 @@
                         <div class="text">Associate software engineer</div>
                         <p>Capgemini Engineering, Eindhoven, The Netherlands</p>
                         <p>2023.3-2024.1: Diagnostic approach unification at TNO-ESI </p>
+                        <p>2024.6-now: Python SECS and EDA protocol library at ASML</p>
                         <p>2022.12 - Now</p>
                     </div>
                 </div>
