update CV and a bit in the experience part

--- a/index.html
+++ b/index.html
@@ -119,11 +119,13 @@
                 <div class="card">
                     <div class="box">
                         <i class="fas fa-book"></i>
-                        <div class="text">Associate software engineer</div>
+                        <div class="text">Software engineer</div>
                         <p>Capgemini Engineering, Eindhoven, The Netherlands</p>
-                        <p>2023.3-2024.1: Diagnostic approach unification at TNO-ESI </p>
-                        <p>2024.6-now: Python SECS and EDA protocol library at ASML</p>
                         <p>2022.12 - Now</p>
+                        <p>2023.3-2024.1: Diagnostic approach unification at TNO-ESI </p>
+                        <p>2024.2-2024.5: Reborn: legacy code rejunvenation </p>
+                        <p>2024.6-now: Python SECS and EDA protocol library at ASML</p>
+
                     </div>
                 </div>
                 <div class="card">
@@ -298,7 +300,7 @@
                                             <a href="https://youtu.be/vxYq8qE7kO8" target="_blank">Information extraction and visualization using Tableau</a>
                                         </div>
 
-                                        <p>This is done by a group of 3 persons. An interactive tool is built to visualize the COVID-19 data in South Korea. With this tool, users can have multiple views about the evolution of the virus, and carry on exploratory analysis using the interactions with ease.</p>
+                                        <p>This project is done by a group of 3 persons. An interactive tool is built to visualize the COVID-19 data in South Korea. With this tool, users can have multiple views about the evolution of the virus, and carry on exploratory analysis using the interactions with ease.</p>
 
                                         <div class="cta1">
                                         <a href="https://youtu.be/vxYq8qE7kO8" target="_blank">Video demonstration</a>
@@ -697,7 +699,7 @@
             <a href="mailto:imruixintang@outlook.com" class="email image-zoom" data-dsn="parallax">imruixintang@outlook.com</a>
         </div>
         <div class="copyright-social">
-            <p>© last update on 26/01/2024</p>
+            <p>© last update on 10/04/2025</p>
             <ul>
               <li class="image-zoom" data-dsn="parallax"><a href="https://www.linkedin.com/in/ruixintang/" target="_blank">Linkedin</a></li>
               <li class="image-zoom" data-dsn="parallax"><a href="https://instagram.com/hanaki_hakaze?igshid=ZDdkNTZiNTM=" target：=“_blank">Instagram</a></li>
