add one more section in fun fact

--- a/index.html
+++ b/index.html
@@ -353,6 +353,18 @@
                                                     <div class="slick-slider">
                                                         <div class="work-item slick-slide">
                                                             <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
+                                                                <img class="has-top-bottom" src="images/boulder.jpg"
+                                                                    alt="">
+                                                                <div class="item-border"></div>
+                                                                <div class="item-info">
+                                                                    <h5 class="cat">Sports</h5>
+                                                                    <h4>Bouldering</h4>
+                                                                    <span><span>Eindhoven, The Netherlands</span></span>
+                                                                </div>
+                                                            </a>
+                                                        </div>
+                                                        <div class="work-item slick-slide">
+                                                            <a href=#Fun data-dsn-grid="move-up" class="effect-ajax">
                                                                 <img class="has-top-bottom" src="images/ski.jpeg"
                                                                     alt="">
                                                                 <div class="item-border"></div>
